<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pagina2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorGreen"
    tools:context="com.example.jalberssonplazas.intro1.Pagina2">

    <TextView
        android:id="@+id/txtModelos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/botonIzquierdo"
        android:text="@string/modelos"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/botonIzquierdo"
        >
        <ImageView
            android:id="@+id/imgModelo1"
            android:layout_width="@dimen/iconos"
            android:layout_height="@dimen/iconos"
            android:background="@drawable/modelo1"
            />
        <TextView
            android:id="@+id/txtModelo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_mod1"
            android:layout_marginLeft="@dimen/textoDescripciones"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/textoDescripciones"
        android:layout_marginLeft="@dimen/botonIzquierdo"
        >
        <ImageView
            android:id="@+id/imgModelo2"
            android:layout_width="@dimen/iconos"
            android:layout_height="@dimen/iconos"
            android:background="@drawable/modelo2"
            />
        <TextView
            android:id="@+id/txtModelo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_mod2"
            android:layout_marginLeft="@dimen/textoDescripciones"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/textoDescripciones"
        android:layout_marginLeft="@dimen/botonIzquierdo"
        >
        <ImageView
            android:id="@+id/imgModelo3"
            android:layout_width="@dimen/iconos"
            android:layout_height="@dimen/iconos"
            android:background="@drawable/modelo3"
            />
        <TextView
            android:id="@+id/txtModelo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_mod3"
            android:layout_marginLeft="@dimen/textoDescripciones"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnContactenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:text="@string/contactenos"
        android:layout_marginTop="@dimen/iconos"
        android:layout_gravity="right"
        />
</LinearLayout>
