<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pagina3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorYellow"
    tools:context="com.example.jalberssonplazas.intro1.Pagina3">

    <TextView
        android:id="@+id/txtFutbolistas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreen"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/iconos"
        android:text="@string/jugadores"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/botonIzquierdo"
        >
        <ImageView
            android:id="@+id/imgFutbolista1"
            android:layout_width="@dimen/iconos"
            android:layout_height="@dimen/iconos"
            android:background="@drawable/futbolista1"
            />
        <TextView
            android:id="@+id/txtFutbolista1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_jug1"
            android:layout_marginLeft="@dimen/textoDescripciones"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/textoDescripciones"
        android:layout_marginLeft="@dimen/botonIzquierdo"
        >
        <ImageView
            android:id="@+id/imgFutbolista2"
            android:layout_width="@dimen/iconos"
            android:layout_height="@dimen/iconos"
            android:background="@drawable/futbolista2"
            />
        <TextView
            android:id="@+id/txtFutbolista2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_jug2"
            android:layout_marginLeft="@dimen/textoDescripciones"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/textoDescripciones"
        android:layout_marginLeft="@dimen/botonIzquierdo"
        >
        <ImageView
            android:id="@+id/imgFutbolista3"
            android:layout_width="@dimen/iconos"
            android:layout_height="@dimen/iconos"
            android:background="@drawable/futbolista3"
            />
        <TextView
            android:id="@+id/txtFutbolista3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_jug3"
            android:layout_marginLeft="@dimen/textoDescripciones"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnContactenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorGreen"
        android:text="@string/contactenos"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/iconos"
        />
</LinearLayout>
