<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorRed"
    tools:context="com.example.jalberssonplazas.intro1.MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:background="@color/colorGreen"
        android:text="@string/titulo_f_m" />
    <ImageView
        android:id="@+id/imgPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/futbolista1"
        android:layout_marginTop="@dimen/textoDescripciones"
        android:layout_gravity="center" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/textoDescripciones"
        >

        <Button
            android:id="@+id/btnJugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorGreen"
            android:textAlignment="center"
            android:layout_marginLeft="@dimen/botonIzquierdo"
            android:textSize="@dimen/textoLabels"
            android:text="@string/jugadores"
            />
        <Button
            android:id="@+id/btnModelos"
            android:layout_width="@dimen/iconos"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/botonIzquierdo"
            android:textAlignment="center"
            android:textSize="@dimen/textoLabels"
            android:layout_marginLeft="@dimen/iconos"
            android:background="@color/colorGreen"
            android:text="@string/modelos"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoLabels"
        android:layout_marginTop="@dimen/iconos"
        android:background="@color/colorGreen"
        android:layout_gravity="right"
        android:textAlignment="center"
        android:text="@string/cerrar"
        />
</LinearLayout>
