<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pagina4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorOrange"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jalberssonplazas.intro1.Pagina4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/iconos"
        >

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_marginLeft="@dimen/iconos"
            />
        <EditText
            android:id="@+id/etxtNombre"
            android:layout_width="@dimen/anchoEdits"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/nombre"
            android:inputType="text"
            android:layout_marginLeft="@dimen/textoDescripciones"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textoLabels"
        >

        <TextView
            android:id="@+id/txtApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido"
            android:layout_marginLeft="@dimen/iconos"
            />
        <EditText
            android:id="@+id/etxtApellido"
            android:layout_width="@dimen/anchoEdits"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/apellido"
            android:inputType="text"
            android:layout_marginLeft="@dimen/textoDescripciones"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textoLabels"
        >

        <TextView
            android:id="@+id/txtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:layout_marginLeft="@dimen/iconos"
            />
        <EditText
            android:id="@+id/etxtCorreo"
            android:layout_width="@dimen/anchoEdits"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="@dimen/textoDescripciones"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textoLabels"
        >

        <TextView
            android:id="@+id/txtCedula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cedula"
            android:layout_marginLeft="@dimen/iconos"
            />
        <EditText
            android:id="@+id/etxtCedula"
            android:layout_width="@dimen/anchoEdits"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:inputType="number"
            android:hint="@string/cedula"
            android:layout_marginLeft="@dimen/textoDescripciones"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorYellow"
        android:layout_gravity="right"
        android:text="@string/enviar"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/marginButtonTop"
        />
</LinearLayout>
